Fix snow-demo and gradient-demo
This repo needs some love - most of the code in demos is outdated,
not-aligned or otherwise faulty, but I managed to build and run
two mentioned programs.

Remember to install libfreetype6-dev and you'll be good to go.

--- a/c/demos/makefile
+++ b/c/demos/makefile
@@ -3,7 +3,9 @@ TARGET       := $(shell $(CC) -dumpmachine)
 LDFLAGS      := -L.. -lgezira -L$(NILE_RUNTIME) -lnile #`freetype-config --libs`
 CFLAGS       := -Wall -Werror -Wno-unused \
                 -I.. -I$(NILE_RUNTIME) \
-                -O3 -ffast-math
+                -O3 -ffast-math \
+		-I/usr/include/freetype2 \
+		-I/usr/include/SDL
                 #`freetype-config --cflags` \
 
 ifneq (,$(findstring darwin,$(TARGET)))
@@ -11,7 +13,7 @@ ifneq (,$(findstring darwin,$(TARGET)))
 else ifneq (,$(findstring mingw,$(TARGET))$(findstring cygwin,$(TARGET)))
   LDFLAGS += -lgdi32 #-mwindows
 else
-  LDFLAGS += -lXext -lm -pthread
+  LDFLAGS += -lX11 -lXext -lm -pthread -lfreetype
 endif
 
 %-demo: %-demo.c FORCE
